[Claude Code] Pick name/country/occupation randomly.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ anyhow = "1.0.98"
 clap = { version = "4.5.40", features = ["derive"] }
 crossterm = "0.29.0"
 nom = "8.0.0"
+rand = "0.8"
 rodio = "0.20.1"
