--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,11 @@ crossterm = "0.29.0"
 nom = "8.0.0"
 rand = "0.8"
 rodio = "0.20.1"
+tts = "0.26.3"
+
+[target.'cfg(target_vendor = "apple")'.dependencies]
+objc2-foundation = { version = "0.3", default-features = false, features = [
+    "alloc",
+    "NSRunLoop",
+    "NSDate",
+] }
