--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ nom = "8.0.0"
 rand = "0.8"
 rodio = "0.20.1"
 tts = "0.26.3"
+rustyline = "17.0.1"
 
 [target.'cfg(target_vendor = "apple")'.dependencies]
 objc2-foundation = { version = "0.3", default-features = false, features = [
